Bug 277777: Fix forwards compatible parsing of expressions in XSLT and be more strict about parsing of functioncalls in DOM-XPath. r=pike sr=peterv